マイグレーションファイルの修正&画像一覧画面に投稿者の名前を表示を実装

--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -1,6 +1,7 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Feeds</h1>
+<h1>投稿画像一覧</h1>
+<br>
 
 <table>
   <thead>
@@ -12,6 +13,7 @@
 
   <tbody>
     <% @feeds.each do |feed| %>
+      <h2><%= feed.user.name %>の投稿</h2>
       <tr>
         <td><%= feed.image %></td>
         <td><%= link_to 'Show', feed %></td>
