--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -16,9 +16,9 @@
       <tr>
         <td><%= feed.image %></td>
         <td><%= feed.user.name %>の投稿</td>
-        <td><%= link_to 'Show', feed %></td>
-        <td><%= link_to 'Edit', edit_feed_path(feed) %></td>
-        <td><%= link_to 'Destroy', feed, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to '詳細', feed %></td>
+        <td><%= link_to '編集', edit_feed_path(feed) %></td>
+        <td><%= link_to '削除', feed, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Feed', new_feed_path %>
+<%= link_to '新しく画像を投稿する', new_feed_path %>
