--- a/app/views/feeds/_form.html.erb
+++ b/app/views/feeds/_form.html.erb
@@ -17,7 +17,12 @@
     <%= form.file_field :image %>
     <%= form.hidden_field :image_cache %>
   </div>
-
+  <br>
+  <div class="feed_content">
+    <%= form.label :content %>
+    <%= form.text_field :content %>
+  </div>
+  <br>
   <div class="actions">
     <%= form.submit %>
   </div>
