投稿一覧に画像を表示&gemファイルの空行調整&ログインしないと画像を投稿できない仕様の設定

--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -14,7 +14,7 @@
   <tbody>
     <% @feeds.each do |feed| %>
       <tr>
-        <td><%= feed.image %></td>
+        <td><%= image_tag "#{feed.image}", :size =>'200x200' %></td>
         <td><%= feed.user.name %>の投稿</td>
         <td><%= feed.content %></td>
         <td><%= link_to '詳細', feed %></td>
