--- a/app/views/feeds/new.html.erb
+++ b/app/views/feeds/new.html.erb
@@ -1,5 +1,10 @@
 <h1>New Feed</h1>
 
-<%= render 'form', feed: @feed %>
+<% if logged_in? %>
+  <%= render 'form', feed: @feed %>
+  <%= link_to 'Back', feeds_path %>
+<% else %>
+  <h4>Please login</h4>
+<% end %>
 
 <%= link_to '画像一覧へ戻る', feeds_path %>
